--- a/css/components/main-header.css
+++ b/css/components/main-header.css
@@ -1,15 +1,24 @@
+.main-header {
+    text-align: justify;
+    position: absolute;
+    box-sizing: border-box;
+    padding-top: 28px;
+    padding-left: 140px;
+    padding-right: 140px;
+    width: 100%;
+    height: 100px;
+    z-index: 1;
+}
+
 .main-header::after {
     content: '';
     display: inline-block;
     width: 100%;
 }
 
-.main-header {
-    text-align: justify;
-}
-
 .main-header .logo {
     font-size: 35px;
     font-weight: 400;
     display: inline-block;
+    color: #fff;
 }
