--- a/css/components/title-rotate.css
+++ b/css/components/title-rotate.css
@@ -1,7 +1,3 @@
-section {
-    position: relative;
-}
-
 .title-rotate {
     position: absolute;
     top: 0;
@@ -12,6 +8,7 @@ section {
     text-transform: uppercase;
     transform-origin: left bottom;
     transform: rotate(90deg); 
+    width: 224px;
 }
 
 .title-rotate::after {
