--- a/css/components/main-card.css
+++ b/css/components/main-card.css
@@ -9,6 +9,14 @@
   height: 362px;
   vertical-align: top;
   color: #f3f3f3;
+
+  transform-origin: left center;
+  transform: scale(1);
+  transition: transform 200ms linear;  
+}
+
+.main-card.-isActive {
+  transform: scale(1.504);
 }
 
 .main-card .content {
