--- a/css/components/main-carrousel.css
+++ b/css/components/main-carrousel.css
@@ -14,6 +14,7 @@
   transform: translateX(-50%);
   font-size: 40px;
   text-align: center;
+  box-shadow:  0 5px 30px 0 rgba(0, 0, 0, 0.07);
 
   transition: transform 400ms linear;
 }
@@ -30,6 +31,32 @@
   background-color: #FFF;
   transform: scale(1.1) translateX(-50%);
   z-index: 1;
+  box-shadow:  0 5px 10px 0 rgba(0, 0, 0, 0.08);
+}
+
+.main-carrousel .wrapPicture {
+  display: inline-block;
+  border: 12px solid #B9A5FB;
+  border-radius: 50%;
+}
+
+.main-carrousel .picture {
+  width: 96px;
+  height: 96px;
+  border-radius: 50%;
+  border: 9px solid #9679F9;
+  float: left;
+}
+
+.main-carrousel .name {
+  font-size: 20px;
+  margin-bottom: 12px;
+}
+  .main-carrousel .testimony {
+  font-size: 14px;  
+  color: rgba(32, 32, 32, 0.5);
+  max-width: 600px;
+  margin: 0 auto;
 }
 
 .main-carrousel .bullets {
