--- a/css/components/main-carrousel.css
+++ b/css/components/main-carrousel.css
@@ -5,9 +5,12 @@
 }
 
 .main-carrousel .card {
+  box-sizing: border-box;
+  padding-top: 30px;
+  padding-bottom: 40px;
   width: 685px;
   height: 100%;
-  background-color: #754ef9;
+  background-color: var(--primary-color);
   position: absolute;
   left: 50%;
   transform-origin: left center;
@@ -67,7 +70,7 @@
   display: inline-block;
   width: 16px;
   height: 16px;
-  background-color: #754ef9;
+  background-color: var(--primary-color);
   opacity: 0.4;
   text-indent: -9999px;
   border-radius: 50%;
