--- a/css/components/play-video.css
+++ b/css/components/play-video.css
@@ -13,7 +13,7 @@
     content: '';
     border-style: solid;
     border-width: 10px 12px;
-    border-color: transparent transparent transparent #754ef9;
+    border-color: transparent transparent transparent var(--primary-color);
     width: 0;
     height: 0;
     position: absolute;
