--- a/css/objects/wrap-featured.css
+++ b/css/objects/wrap-featured.css
@@ -1,7 +1,7 @@
 .wrap-featured {
     position: relative;
-    background-image: linear-gradient(to right, #754ef9 33%, #fff 0);
-    border-bottom: 18px solid #754ef9;
+    background-image: linear-gradient(to right, var(--primary-color) 33%, #fff 0);
+    border-bottom: 18px solid var(--primary-color);
     box-sizing: border-box;
     padding: 140px 75px 0;
     text-align: center;
